# dgm_franka

./: .gitignore  .gitmodules  =2.6.17  CMakeLists.txt  Dockerfile  README.md  code_server_config.yaml  dgh_franka.ipynb  dgm.md  docker-compose.yaml  docker_build.sh  docker_start.sh  franka_dynamic_interface.yaml  package.xml  pyproject.toml  vscode-extensions.txt
.github/workflows/: docker-image.yml
dgm_franka/: __init__.py
docs/source/: index.md
docs/source/tutorial/: dg_head.md  index.md  install.md  minimal.md
examples/: dgm_kin_interface.ipynb
examples/.config/code-server/: config.yaml
examples/.ipynb_checkpoints/: dynamic_interface-checkpoint.ipynb
examples/lcm_msgs/: __init__.py  ipc_trigger_t.py
include/: ipc_trigger_t.hpp
include/dgm_fr3_dyn/: dgm_fr3_dyn.hh
include/dgm_fr3_joint_kin/: dgm_fr3_joint_kin.hh
include/dgm_fr3_kin/: dgm_fr3_kin.hh
include/lcm_msgs/: fr3_commands.lcm  fr3_states.lcm
include/lcm_msgs/fr3_commands/: __init__.py  fr3_joint_cmd.hpp  fr3_joint_cmd.py
include/lcm_msgs/fr3_states/: __init__.py  fr3_joint_state.hpp  fr3_joint_state.py
interface_configs/: fr3_task_pose_interface.yaml  fr3_task_vel_interface.yaml
lcm_msgs/: franka_joint_interface.lcm
lcm_msgs/fr3_joint/: __init__.py  fr3_joint_dyn.hpp  fr3_joint_dyn.py  fr3_joint_kin.hpp  fr3_joint_kin.py
notebooks/: dynamic_interface.ipynb
shared_memory_configs/: franka_kinematic_interface.yaml
src/: CMakeLists.txt  franka_trajectory_utils.cpp  ipc_trigger.lcm  joint_impedance_control.cpp
src/dgm_fr3_dyn/: dgm_fr3_dyn.cpp  dgm_fr3_dyn_main.cpp
src/dgm_fr3_joint_dyn/: dgm_fr3_joint_dyn.cpp  dgm_fr3_joint_dyn_main.cpp
src/dgm_fr3_joint_kin/: dgm_fr3_joint_kin.cpp  dgm_fr3_joint_kin_main.cpp
src/dgm_fr3_kin/: dgm_fr3_kin.cpp  dgm_fr3_kin_main.cpp
src/dgm_fr3_task_pose/: dgm_fr3_task_pose.cpp  dgm_fr3_task_pose_main.cpp
src/dgm_fr3_task_vel/: dgm_fr3_task_vel.cpp  dgm_fr3_task_vel_main.cpp
