<?xml version="1.0"?>
<package format="3">

  <name>dgm_franka</name>
  <version>1.0.0</version>

  <description>
    Dynamic Graph Manager for Franka FR3 robots
  </description>

  <maintainer email="rk4342@nyu.edu">Rooholla Khorrambakht</maintainer>

  <license>TODO</license>
  
  <author email="rk4342@nyu.edu">Rooholla Khorrambakht</author>
  <author email="bd1555@nyu.edu">Bolun Dai</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>mpi_cmake_modules</buildtool_depend>

  <!-- dep -->
  <depend>ament_index_cpp</depend>
  <depend>dynamic_graph_manager</depend>
  <depend>yaml_utils</depend>

  <!-- pure python pkg-->
  <!-- <depend>robot_properties_kuka</depend> -->

  <!-- dep -->
  <depend>real_time_tools</depend>
  <depend>Eigen3</depend>
  <!-- <depend>pinocchio</depend> -->
  <depend>dynamic-graph</depend>
  <depend>dynamic-graph-python</depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>

</package>